@@ -52,6 +52,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::Manifest" => 0,
     "Dist::Zilla::Plugin::ManifestSkip" => 0,
     "Dist::Zilla::Plugin::MetaConfig" => 0,
+    "Dist::Zilla::Plugin::MetaData::BuiltWith" => 0,
     "Dist::Zilla::Plugin::MetaJSON" => 0,
     "Dist::Zilla::Plugin::MetaNoIndex" => 0,
     "Dist::Zilla::Plugin::MetaProvides::Package" => 0,
@@ -128,6 +129,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::Manifest" => 0,
   "Dist::Zilla::Plugin::ManifestSkip" => 0,
   "Dist::Zilla::Plugin::MetaConfig" => 0,
+  "Dist::Zilla::Plugin::MetaData::BuiltWith" => 0,
   "Dist::Zilla::Plugin::MetaJSON" => 0,
   "Dist::Zilla::Plugin::MetaNoIndex" => 0,
   "Dist::Zilla::Plugin::MetaProvides::Package" => 0,
